# netactview

./: AUTHORS  ChangeLog  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.in  netactview.1  netactview.desktop.in
distribution/deb/: how-to-create-deb.txt
distribution/deb/debian/: changelog  control  copyright  rules  watch
netactview/: AUTHORS  Makefile.am  NEWS  README  alt.make.sh  config.h.in  configure  configure.ac  libtool
netactview/data/: Makefile.am
netactview/po/: LINGUAS  Makefile.in.in  et.po  it.po  netactview.pot  pt.po  ro.po  ru.po
netactview/src/: definitions.h  filter.h  main.c  mainwindow.c  mainwindow.h  net.c  netactview.glade  process.h  tray.h  utils.h
po/: POTFILES.in  ro.po
src/: Makefile.am  Makefile.in  filter.c  mainwindow.c  mainwindow.h  nactv-debug.h  net.h  netactview.glade  process.c  utils.c
